# benchboss

./: index.html  package.json
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/controller/: capture.rs  enumerate.rs  mod.rs  vigem.rs
src-tauri/src/routing/: mod.rs  table.rs
src/components/: AssignScreen.tsx  BenchPlayer.tsx  SlotGrid.tsx  SwapModal.tsx
