[package]
name = "benchboss"
version = "0.1.0"
description = "BenchBoss – 5-player Parsec controller router"
authors = ["Srikant Hamsa"]
edition = "2021"

[lib]
name = "benchboss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "benchboss"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
[target.'cfg(target_os = "windows")'.dependencies]
vigem-client = "0.1"
windows = { version = "0.58", features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_UI_Input",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
] }
xinput = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
